apps/frontEndFezinhadasorte/service-front-end-fezinhadasorte.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-fezinhadasorte-clusterip-service
  namespace: producao
spec:
  selector:
    app: front-end-fezinhadasorte
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
