apps/frontEndFezinhadasorte/ingress-main-certificate.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-fezinhadasorte-cluster-issuer"
spec:
  ingressClassName: nginx
  tls:
  - secretName: fezinhadasorte-secret-certificate
    hosts:
    - www.fezinhadasorte.com
    - fezinhadasorte.com
  rules:
  - host: www.fezinhadasorte.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: front-end-fezinhadasorte-clusterip-service
            port:
              number: 80
  - host: fezinhadasorte.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: front-end-fezinhadasorte-clusterip-service
            port:
              number: 80
