apps/frontEndFezinhadasorte/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-fezinhadasorte
  namespace: front-end-fezinhadasorte
  annotations:
    nginx.ingress.kubernates.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: fezinhadasorte-ip-external
    acme.cert-manager.io/http01-edit-in-place: "true"
    certm-manager.io/cluster-issuer: "letsencrypt-fezinhadasorte-cluster-issuer"
spec:
  tls:
  - hosts:
    - "www.fezinhadasorte.com"
    secretname: fezinhadasorte-letsencrypt-secret
  ingressClassName: nginx
  rules:
  - host: www.fezinhadasorte.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-end-fezinhadasorte-clusterip-service
            port: 
              number: 443
  - host: fezinhadasorte.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-end-fezinhadasorte-clusterip-service
            port: 
              number: 443
